Fix gaps between textboxes

--- a/sds-style.css
+++ b/sds-style.css
@@ -606,6 +606,8 @@ input::-webkit-color-swatch-wrapper {
 .renderedtext > p {
   display: table;
   margin: 0;
+  margin-top: -0.5px;
+  margin-bottom: -0.5px;
   background-color: black;
   padding: 0.2em;
   padding-left: 0.5em;
